# xiaozhiai

./: README.md  buildozer.spec  main.py
.github/workflows/: action.yml  buildozer_action.yml
xiaozhi-client/py-xiaozhi-mqtt/: 1.json  py-shuneipai-xiaozhi.py  py-xiaozhi.py
xiaozhi-client/py-xiaozhi-mqtt/GUI/: buildozer.spec  requirements.txt
xiaozhi-client/py-xiaozhi-mqtt/GUI/src/: mqtt_client.py
xiaozhi-client/py-xiaozhi-mqtt/src/: config.py
xiaozhi-client/py-xiaozhi-mqtt/xiaozhi-python/: README.md  requirements.txt  xiaozhi-python.py
xiaozhi-client/py-xiaozhi-ws/: README.md  config.py  main.py  requirements.txt
xiaozhi-client/py-xiaozhi-ws/scenarios/: example.json
xiaozhi-client/xiaozhi-web-client/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  proxy.py  pyproject.toml  requirements.txt
xiaozhi-client/xiaozhi-web-client/static/: audio-processor.js  styles.css
xiaozhi-client/xiaozhi-web-client/templates/: index.html
xiaozhi-esp32-server/: config.yaml
xiaozhi-esp32-server/core/providers/llm/llamacpp/: llamacpp.py
